add variable for man.js

--- a/package.json
+++ b/package.json
@@ -10,19 +10,11 @@
     ],
     "author": "Fabiano de Souza Pereira",
     "contributors": [],
-    "dependencies": {},
+    "dependencies": {
+        "start": "node main.js"
+        "querystring": "^0.2.0"
+    },
     "scripts": {
         "start": "node main.js"
-    },
-    
-    [
-  {
-        "fullName": "Nome do Deputado, ex: João da Silva",
-        "birthday": "Data de aniversário, formato  DD-MM",
-        "party": "Sigla do Partido, ex: PJS",
-        "state": "Sigla do Estado do Depudado, ex: SC",
-        "main": "Se for Titular 'true', senão false ou null",
-        "phone": "Telefone do Deputado Federal",
-  }
-    ] 
+    }
 }
